gtk3-ui: Make sure we don't overflow horizontally
If the font size is large, the UI may end up overflowing horizontally
on small screens. Make sure that does not happen by limiting info
label size and setting proper expand/fill properties. Also set info
label font size in application css so we don't get nasty surprises
if default is massive.

--- a/src/gtk3-ui/sync-ui.css
+++ b/src/gtk3-ui/sync-ui.css
@@ -17,6 +17,10 @@ GtkWindow#meego_win {
     background-color : #4a535a;
 }
 
+GtkLabel#info_label {
+    font : 12;
+}
+
 GtkEventBox#sync_data_and_type_box,
 GtkEventBox#sync_data_and_type_box:insensitive {
     background-color : #ececec;
@@ -34,10 +38,10 @@ GtkLabel#sync_service_label,
 GtkLabel#sync_status_label,
 GtkLabel#no_server_label,
 GtkLabel#sync_failure_label {
-    font : Bold 11;
+    font : Bold;
 }
 
 GtkButton#sync_btn {
     -GtkButton-inner-border : 10 10 10 10;
-    font : Bold 11;
+    font : Bold;
 }
